--- a/base-module.gradle
+++ b/base-module.gradle
@@ -22,7 +22,7 @@ android {
         }
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
+      //  coreLibraryDesugaringEnabled true
 
         sourceCompatibility JavaVersion.VERSION_18
         targetCompatibility JavaVersion.VERSION_18
@@ -33,6 +33,9 @@ android {
 }
 
 dependencies {
+
+  //  coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.4")
+
     kapt DaggerHilt.hiltCompiler
     implementation DaggerHilt.hiltAndroid
 
