--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -28,8 +28,10 @@ android {
         }
     }
     compileOptions {
+/*
         coreLibraryDesugaringEnabled true
-
+        isCoreLibraryDesugaringEnabled = true
+*/
         sourceCompatibility JavaVersion.VERSION_18
         targetCompatibility JavaVersion.VERSION_18
     }
@@ -39,6 +41,8 @@ android {
 }
 
 dependencies {
+    //  coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.4")
+
     implementation "androidx.compose.compiler:compiler:1.5.9"//Compose.compiler
     implementation Compose.ui
     implementation Compose.uiToolingPreview
@@ -52,22 +56,22 @@ dependencies {
     kapt DaggerHilt.hiltCompiler
     implementation DaggerHilt.hiltAndroid
 
-    testImplementation Testing.junit4 
-    testImplementation Testing.junitAndroidExt 
-    testImplementation Testing.truth 
-    testImplementation Testing.coroutines 
-    testImplementation Testing.turbine 
+    testImplementation Testing.junit4
+    testImplementation Testing.junitAndroidExt
+    testImplementation Testing.truth
+    testImplementation Testing.coroutines
+    testImplementation Testing.turbine
     testImplementation Testing.composeUiTest
     testImplementation Testing.mockk
-    testImplementation Testing.mockWebServer 
+    testImplementation Testing.mockWebServer
 
-    androidTestImplementation Testing.junit4 
-    androidTestImplementation Testing.junitAndroidExt 
-    androidTestImplementation Testing.truth 
-    androidTestImplementation Testing.coroutines 
-    androidTestImplementation Testing.turbine 
+    androidTestImplementation Testing.junit4
+    androidTestImplementation Testing.junitAndroidExt
+    androidTestImplementation Testing.truth
+    androidTestImplementation Testing.coroutines
+    androidTestImplementation Testing.turbine
     androidTestImplementation Testing.composeUiTest
     androidTestImplementation Testing.mockk
-    androidTestImplementation Testing.mockWebServer 
-    androidTestImplementation Testing.hiltTesting 
+    androidTestImplementation Testing.mockWebServer
+    androidTestImplementation Testing.hiltTesting
 }
