--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -43,15 +43,17 @@ android {
 dependencies {
     //  coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.4")
 
-    implementation "androidx.compose.compiler:compiler:1.5.9"//Compose.compiler
+    implementation Compose.compiler
     implementation Compose.ui
     implementation Compose.uiToolingPreview
+    implementation Compose.uiToolingPreviewAndroid
     implementation Compose.hiltNavigationCompose
-    implementation Compose.material
+    implementation Compose.composeMaterial3
     implementation Compose.runtime
     implementation Compose.navigation
     implementation Compose.viewModelCompose
     implementation Compose.activityCompose
+    implementation Compose.uiGraphics
 
     kapt DaggerHilt.hiltCompiler
     implementation DaggerHilt.hiltAndroid
