Fix: Fix preview problem

--- a/base-module.gradle
+++ b/base-module.gradle
@@ -44,7 +44,7 @@ dependencies {
     testImplementation Testing.truth
     testImplementation Testing.coroutines
     testImplementation Testing.turbine
-    testImplementation Testing.composeUiTest
+  //  testImplementation Testing.composeUiTest
     testImplementation Testing.mockk
     testImplementation Testing.mockWebServer
 
@@ -53,7 +53,7 @@ dependencies {
     androidTestImplementation Testing.truth
     androidTestImplementation Testing.coroutines
     androidTestImplementation Testing.turbine
-    androidTestImplementation Testing.composeUiTest
+ //   androidTestImplementation Testing.composeUiTest
     androidTestImplementation Testing.mockk
     androidTestImplementation Testing.mockWebServer
     androidTestImplementation Testing.hiltTesting
